# quizpoolai

./: Makefile  README.md  requirements.txt
backend/: .env  Dockerfile  README.md  main.py  models.py  pyproject.toml  qgen_service.py  requirements.txt  transcript_service.py  utlis.py
backend/app/: __init__.py  config.py  logger.py  main.py
backend/app/models/: __init__.py  schemas.py
backend/app/services/: __init__.py  quiz_service.py  transcript_service.py
backend/app/storage/: __init__.py  pinecone_client.py
backend/tests/: test_quiz_service.py  test_transcript_service.py
frontend/: Dockerfile  README.md  globals.css  jest.config.js  next.config.js  package-lock.json  package.json  tailwind.config.js  tsconfig.json
frontend/app/: layout.tsx  page.tsx
frontend/app/quiz/[id]/: page.tsx
frontend/components/: AnimatedConfetti.tsx  AnimatedMascot.tsx  AnswerButton.tsx  CoinShower.tsx  CorrectAnimation.tsx  ErrorEmptyState.tsx  GiftBox.tsx  LevelUpModal.tsx  Loader.tsx  ProgressBar.tsx  ProgressRing.tsx  QuizCard.tsx  SadEmoji.tsx  StreakBadge.tsx  WrongAnimation.tsx  XPToast.tsx  YouTubePreview.tsx  variants.ts
frontend/hooks/: useGamification.ts  useLocalQuizzes.ts
frontend/lib/: api.ts
frontend/public/lottie/: mascot.json
frontend/tests/: AnswerButton.test.tsx  QuizFlow.test.tsx  server.ts  setupTests.tsx  useGamification.test.ts
frontend/types/: react-player.d.ts
